--- a/index.html
+++ b/index.html
@@ -4,5 +4,24 @@ layout: default
 
 <div class="home">
 
+  <div class="col-wrapper">
+    <div class="col-image"> <img class="mypic" src="images/me.jpg" height="150" width="150" /> </div>
+    <div class="col-body">  
+
+       <p>Hi, I'm Rachel.</p>
+
+       <p>I love finding patterns in large datasets and enjoy helping others do the same.</p> 
+
+       <p>My research focuses primarily on topological methods for high-dimensional data analysis, with a specialization in <a href="https://en.wikipedia.org/wiki/Persistent_homology">persistent homology</a>. </p>
+
+       <p>I got my start in 2001 as an operations processor in the unclaimed property department at <a href="https://www.wellsfargo.com/">Wells Fargo Bank</a>, where I learned business process, database, and in-house software design from the ground up through hands-on experience with real-world problems. From there, I took my skills as a business analyst to the next level at <a href="http://www.fnf.com/">Fidelity National Financial</a>, where I focused primarily on large software integrations spanning operations, accounting, and reporting systems.</p>
+
+       <p> I left the corporate world in 2012 to pursue a graduate degree, and in May 2017, I received my PhD in mathematics at <a href="http://www.math.rutgers.edu/">Rutgers University</a>. My decade-long experience in the corporate setting has proven to be an asset for large, interdisciplinary research projects in the academic setting. Starting in June 2017, I will be a postdoctoral researcher at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. </p>
+
+       <p>Looking forward to the next big adventure! </p>
+
+    </div>
+  </div>
+
 </div>
 
