--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <div class="home">
 
   <div class="col-wrapper">
-    <div class="col col-image"> <img class="mypic" src="images/me.jpg" height="150" width="150" /> </div>
-    <div class="col col-body">  
+    <div class="col-image"> <img class="mypic" src="images/me.jpg" height="150" width="150" /> </div>
+    <div class="col-body">  
 
        <p>Hi, I'm Rachel.</p>
 
