Updating for mobile.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ layout: default
 
        <p>My research focuses primarily on topological methods for high-dimensional data analysis, with a specialization in <a href="https://en.wikipedia.org/wiki/Persistent_homology">persistent homology</a>. </p>
 
-       <p>I got my start in 2001 as an operations processor in the unclaimed property department at <a href="https://www.wellsfargo.com/">Wells Fargo Bank</a>, where I learned business process, database, and in-house software design from the ground up through hands-on experience with real-world problems. From there, I took my skills as a business analyst to the next level at <a href="http://www.fnf.com/">Fidelity National Financial</a>, where I focused primarily on large software integrations spanning operations, accounting, and reporting systems.</p>
+       <p>I got my start in 2001 as an operations processor in the <a href="https://www.wellsfargofunds.com/ind/account-services/account-inactivity.html">unclaimed property</a> department at <a href="https://www.wellsfargo.com/">Wells Fargo Bank</a>, where I learned business process, database, and in-house software design from the ground up through hands-on experience with real-world problems. From there, I took my skills as a business analyst to the next level at <a href="http://www.fnf.com/">Fidelity National Financial</a>, where I focused primarily on large software integrations spanning operations, accounting, and reporting systems.</p>
 
-       <p> I left the corporate world in 2012 to pursue a graduate degree, and in May 2017, I received my PhD in mathematics at <a href="http://www.math.rutgers.edu/">Rutgers University</a>. My decade-long experience in the corporate setting has proven to be an asset for large, interdisciplinary research projects in the academic setting. Starting in June 2017, I will be a postdoctoral researcher at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. </p>
+       <p> I left the corporate world in 2012 to pursue a graduate degree, and in May 2017, I received my PhD in mathematics at <a href="http://www.math.rutgers.edu/">Rutgers University</a>. My decade-long experience in the corporate setting has proven to be an asset for large, interdisciplinary research projects. Starting in June 2017, I will be a postdoctoral researcher at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. </p>
 
-       <p>Looking forward to the next big adventure! </p>
+       <p>As always: looking forward to the next big adventure! </p>
 
     </div>
   </div>
