--- a/math.html
+++ b/math.html
@@ -6,7 +6,7 @@ permalink: /math/
 
 <div class="home">
 
-  I was a postdoctoral researcher at the <a href="http://www.upenn.edu/">University of Pennsylvania</a> in the <a href="https://www.ese.upenn.edu/">Department of Electrical and Systems Engineering</a> for the academic year 2017-2018, where I worked with <a href="https://www.math.upenn.edu/~ghrist/">Professor Robert Ghrist</a> on both theoretical and applied aspects of persistent homology. 
+  For the academic year 2017-2018, I worked as a postdoctoral researcher at the <a href="http://www.upenn.edu/">University of Pennsylvania</a> in the <a href="https://www.ese.upenn.edu/">Department of Electrical and Systems Engineering</a>. I worked with <a href="https://www.math.upenn.edu/~ghrist/">Professor Robert Ghrist</a> on both theoretical and applied aspects of persistent homology. 
 
   <p  style="margin-top:1em;">
   I received my Ph.D. in mathematics at <a href="http://www.math.rutgers.edu/">Rutgers University</a> in May 2017 under the direction of <a href="http://sites.math.rutgers.edu/~mischaik/">Professor Konstantin Mischaikow</a>. My thesis can be found <a href="https://rucore.libraries.rutgers.edu/rutgers-lib/53620/">here</a>.
