--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: default
     <div class="col-image"> <img class="mypic" src="images/me.jpg" height="150" width="150" /> </div>
     <div class="col-body">  
 
+     <p>&nbsp;</p>
+
      <p>Hi, I'm Rachel.</p>
 
      <p>I love finding patterns in large datasets and enjoy helping others do the same.</p> 
