tweaking whitespace newschool style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <div class="col-image"> <img class="mypic" src="images/me.jpg" height="150" width="150" /> </div>
     <div class="col-body">  
 
-     <p>&nbsp;</p>
+     <div height="1em" />
 
      <p>Hi, I'm Rachel.</p>
 
