--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ layout: default
     <div class="col-image"> <img class="mypic" src="images/me.jpg" height="150" width="150" /> </div>
     <div class="col-body">  
 
-     <div height="10em" />
-
-     <p>Hi, I'm Rachel.</p>
+     <p style="height=5em; valign=bottom;">Hi, I'm Rachel.</p>
 
      <p>I love finding patterns in large datasets and enjoy helping others do the same.</p> 
 
