Updataing math wtf

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 
      <p>I love finding patterns in large datasets and enjoy helping others do the same.</p> 
 
-     <p>I am currently the Director of Data Science for <a href="http://www.fnf.com">Fidelity National Financial</a>, where I am helping to build a culture of data-driven insight and innovation through the development of a corporate research practice, peer-review, and supportive atmosphere for learning.</p>
+     <p>I am currently the Director of Data Science for <a href="http://www.fnf.com">Fidelity National Financial</a>, where I am helping to build a culture of data-driven insight and innovation through the development of a corporate research practice, peer-review, and a supportive atmosphere for learning.</p>
 
 <!--
 
